Ajout du document récapitulatif de division des attributs

--- a/Aymeric/Untitled.ipynb
+++ b/Aymeric/Untitled.ipynb
@@ -2,29 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-ba7f83fc8951>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-ba7f83fc8951>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    import Aymeric/read&clean.ipynb\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:File `'Aymeric/read&clean.ipynb.py'` not found.\n"
      ]
     }
    ],
    "source": [
-    "import Aymeric/read&clean.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " "
+    "%run Aymeric/read&clean.ipynb"
    ]
   },
   {
