--- a/Matthieu.ipynb
+++ b/Matthieu.ipynb
@@ -557,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "circledata = crimedata[['ViolentCrimesPerPop', 'PctKids2Par','PctIlleg','PctFam2Par','PctTeen2Par','PctYoungKids2Par','racepctblack','racePctWhite']].copy()\n",
@@ -815,7 +817,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Correlation matrix\n",
@@ -859,7 +863,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Scatter and density plots\n",
@@ -903,7 +909,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
@@ -1009,7 +1017,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1030,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
