--- a/Jean.ipynb
+++ b/Jean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,12 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import Imputer\n",
     "import scipy\n",
-    "from scipy import *"
+    "from scipy import *\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -1827,404 +1832,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>population</th>\n",
-       "      <th>householdsize</th>\n",
-       "      <th>racepctblack</th>\n",
-       "      <th>racePctWhite</th>\n",
-       "      <th>racePctAsian</th>\n",
-       "      <th>racePctHisp</th>\n",
-       "      <th>agePct12t21</th>\n",
-       "      <th>agePct12t29</th>\n",
-       "      <th>agePct16t24</th>\n",
-       "      <th>agePct65up</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PctForeignBorn</th>\n",
-       "      <th>PctBornSameState</th>\n",
-       "      <th>PctSameHouse85</th>\n",
-       "      <th>PctSameCity85</th>\n",
-       "      <th>PctSameState85</th>\n",
-       "      <th>LandArea</th>\n",
-       "      <th>PopDens</th>\n",
-       "      <th>PctUsePubTrans</th>\n",
-       "      <th>LemasPctOfficDrugUn</th>\n",
-       "      <th>ViolentCrimesPerPop</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.42</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.95</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1988</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1989</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1990</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.69</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.53</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1991</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.69</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.68</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>0.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1992</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>0.63</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>0.19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1993 rows × 101 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      population  householdsize  racepctblack  racePctWhite  racePctAsian  \\\n",
-       "0           0.19           0.33          0.02          0.90          0.12   \n",
-       "1           0.00           0.16          0.12          0.74          0.45   \n",
-       "2           0.00           0.42          0.49          0.56          0.17   \n",
-       "3           0.04           0.77          1.00          0.08          0.12   \n",
-       "4           0.01           0.55          0.02          0.95          0.09   \n",
-       "...          ...            ...           ...           ...           ...   \n",
-       "1988        0.02           0.41          1.00          0.21          0.02   \n",
-       "1989        0.01           0.40          0.10          0.87          0.12   \n",
-       "1990        0.05           0.96          0.46          0.28          0.83   \n",
-       "1991        0.16           0.37          0.25          0.69          0.04   \n",
-       "1992        0.08           0.51          0.06          0.87          0.22   \n",
-       "\n",
-       "      racePctHisp  agePct12t21  agePct12t29  agePct16t24  agePct65up  ...  \\\n",
-       "0            0.17         0.34         0.47         0.29        0.32  ...   \n",
-       "1            0.07         0.26         0.59         0.35        0.27  ...   \n",
-       "2            0.04         0.39         0.47         0.28        0.32  ...   \n",
-       "3            0.10         0.51         0.50         0.34        0.21  ...   \n",
-       "4            0.05         0.38         0.38         0.23        0.36  ...   \n",
-       "...           ...          ...          ...          ...         ...  ...   \n",
-       "1988         0.01         0.54         0.57         0.43        0.45  ...   \n",
-       "1989         0.16         0.43         0.51         0.35        0.30  ...   \n",
-       "1990         0.32         0.69         0.86         0.73        0.14  ...   \n",
-       "1991         0.25         0.35         0.50         0.31        0.54  ...   \n",
-       "1992         0.10         0.58         0.74         0.63        0.41  ...   \n",
-       "\n",
-       "      PctForeignBorn  PctBornSameState  PctSameHouse85  PctSameCity85  \\\n",
-       "0               0.12              0.42            0.50           0.51   \n",
-       "1               0.21              0.50            0.34           0.60   \n",
-       "2               0.14              0.49            0.54           0.67   \n",
-       "3               0.19              0.30            0.73           0.64   \n",
-       "4               0.11              0.72            0.64           0.61   \n",
-       "...              ...               ...             ...            ...   \n",
-       "1988            0.01              0.75            0.57           0.74   \n",
-       "1989            0.22              0.28            0.34           0.48   \n",
-       "1990            0.53              0.25            0.17           0.10   \n",
-       "1991            0.25              0.68            0.61           0.79   \n",
-       "1992            0.45              0.64            0.54           0.59   \n",
-       "\n",
-       "      PctSameState85  LandArea  PopDens  PctUsePubTrans  LemasPctOfficDrugUn  \\\n",
-       "0               0.64      0.12     0.26            0.20                 0.32   \n",
-       "1               0.52      0.02     0.12            0.45                 0.00   \n",
-       "2               0.56      0.01     0.21            0.02                 0.00   \n",
-       "3               0.65      0.02     0.39            0.28                 0.00   \n",
-       "4               0.53      0.04     0.09            0.02                 0.00   \n",
-       "...              ...       ...      ...             ...                  ...   \n",
-       "1988            0.71      0.03     0.17            0.02                 0.00   \n",
-       "1989            0.39      0.01     0.28            0.05                 0.00   \n",
-       "1990            0.00      0.02     0.37            0.20                 0.00   \n",
-       "1991            0.76      0.08     0.32            0.18                 0.91   \n",
-       "1992            0.52      0.03     0.38            0.33                 0.22   \n",
-       "\n",
-       "      ViolentCrimesPerPop  \n",
-       "0                    0.20  \n",
-       "1                    0.67  \n",
-       "2                    0.43  \n",
-       "3                    0.12  \n",
-       "4                    0.03  \n",
-       "...                   ...  \n",
-       "1988                 0.19  \n",
-       "1989                 0.09  \n",
-       "1990                 0.45  \n",
-       "1991                 0.23  \n",
-       "1992                 0.19  \n",
-       "\n",
-       "[1993 rows x 101 columns]"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-88a7a7ed17cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_clean\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ViolentCrimesPerPopLevel'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     ]
     }
    ],
    "source": [
-    "data_clean"
+    "data_clean.drop['ViolentCrimesPerPopLevel']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -2638,13 +2267,13 @@
        "[1993 rows x 101 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_clean_complete = data_clean\n",
+    "data_clean_complete = data_clean.copy()\n",
     "first_quartile = 0.07\n",
     "median = 0.15\n",
     "third_quartile = 0.33\n",
@@ -2667,7 +2296,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2693,37 +2324,38 @@
     "X = data_clean_complete.iloc[:, 0:101].values\n",
     "y = data_clean_complete.iloc[:, 101].values\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
     "\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "sc = StandardScaler()\n",
     "X_train = sc.fit_transform(X_train)\n",
     "X_test = sc.transform(X_test)\n",
     "\n",
     "\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "\n",
     "lda = LDA(n_components=1)\n",
     "X_train = lda.fit_transform(X_train, y_train)\n",
     "X_test = lda.transform(X_test)\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "classifier = RandomForestClassifier(max_depth=2, random_state=0)\n",
     "\n",
     "classifier.fit(X_train, y_train)\n",
     "y_pred = classifier.predict(X_test)\n",
     "\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(cm)\n",
     "print('Accuracy' + str(accuracy_score(y_test, y_pred)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
