--- a/Jean.ipynb
+++ b/Jean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
        "[1993 rows x 123 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
        "(23,)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
        "[1993 rows x 101 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1590,7 @@
        "Name: ViolentCrimesPerPop, Length: 1993, dtype: float64"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,17 +1601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a25a40f90>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a191aa990>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -1683,7 +1683,7 @@
        "Name: PctNotSpeakEnglWell, Length: 101, dtype: float64"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1716,7 @@
        "Name: pctWSocSec, Length: 101, dtype: float64"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
        "-0.407480981771181"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,17 +1751,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a1ddbea10>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a190a3f90>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1832,28 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-88a7a7ed17cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_clean\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ViolentCrimesPerPopLevel'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'method' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "data_clean.drop['ViolentCrimesPerPopLevel']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -2267,7 +2246,7 @@
        "[1993 rows x 101 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
