--- a/Jean.ipynb
+++ b/Jean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
        "[1993 rows x 123 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
        "(23,)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,14 +1091,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jeanrannou/opt/anaconda3/lib/python3.7/site-packages/sklearn/utils/deprecation.py:66: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/sklearn/utils/deprecation.py:66: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
       "  warnings.warn(msg, category=DeprecationWarning)\n"
      ]
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
        "[1993 rows x 101 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1585,7 @@
        "Name: ViolentCrimesPerPop, Length: 1993, dtype: float64"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,17 +1596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a25a40f90>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1080bd350>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1678,7 +1678,7 @@
        "Name: PctNotSpeakEnglWell, Length: 101, dtype: float64"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1711,7 @@
        "Name: pctWSocSec, Length: 101, dtype: float64"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
        "-0.407480981771181"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,17 +1746,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a1ddbea10>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a1edfd690>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2213,7 +2213,7 @@
        "[1993 rows x 101 columns]"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2224,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -2233,22 +2233,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jeanrannou/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  \n",
-      "/Users/jeanrannou/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  app.launch_new_instance()\n",
-      "/Users/jeanrannou/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  if sys.path[0] == '':\n",
-      "/Users/jeanrannou/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -2638,13 +2638,13 @@
        "[1993 rows x 101 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_clean_complete = data_clean\n",
+    "data_clean_complete = data_clean.copy()\n",
     "first_quartile = 0.07\n",
     "median = 0.15\n",
     "third_quartile = 0.33\n",
@@ -2666,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2684,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/jeanrannou/opt/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
       "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
      ]
     }
